Created 'about us' page. Changed theme to 'beautifulhugo' as an easier and cleaner start for an HHT museum site.

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://demo.hahnemannhouse.org/"
 languageCode = "en-gb"
 title = "Hahnemann House Trust"
-theme = "nederburg"
+theme = "beautifulhugo"
